parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@sets.py-4.snap
---
source: parser/src/parser/parser.rs
description: "{a,\nb,\n    c}"
input_file: parser/test_data/inputs/one_liners/sets.py
---
Module {
    node: Node {
        start: 0,
        end: 13,
    },
    body: [
        ExpressionStatement(
            Set(
                Set {
                    node: Node {
                        start: 0,
                        end: 13,
                    },
                    elements: [
                        Name(
                            Name {
                                node: Node {
                                    start: 1,
                                    end: 2,
                                },
                                id: "a",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 4,
                                    end: 5,
                                },
                                id: "b",
                            },
                        ),
                        Name(
                            Name {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                id: "c",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
