parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@string.py-3.snap
---
source: parser/src/parser/parser.rs
description: "y = \"\"\"multi\"\"\""
input_file: parser/test_data/inputs/one_liners/string.py
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 15,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "y",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 15,
                        },
                        value: "multi",
                    },
                ),
            },
        ),
    ],
}
