parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@string.py-4.snap
---
source: parser/src/parser/parser.rs
description: "raw_err = r'ss\n"
input_file: parser/test_data/inputs/one_liners/string.py
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [],
}
