parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@string.py-5.snap
---
source: parser/src/parser/parser.rs
description: "raw_err = r'ss\n"
input_file: parser/test_data/inputs/one_liners/string.py
---
[
    InvalidSyntax {
        msg: "String not terminated",
        input: "raw_err =",
        advice: "",
        span: (
            10,
            14,
        ),
    },
]
