parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@string.py.snap
---
source: parser/src/parser/parser.rs
description: "x = 'simple text\\n'"
input_file: parser/test_data/inputs/one_liners/string.py
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 19,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "x",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 19,
                        },
                        value: "simple text\n",
                    },
                ),
            },
        ),
    ],
}
